# py-project-setup

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTION.md  LICENSE  README.md  azure-pipelines.yml  requirements-dev.txt  setup.cfg  tox.ini
.run/: Pre-commit.run.xml  tox [build].run.xml  tox [full].run.xml  tox [local].run.xml  tox [pre-commit].run.xml  tox [py310] (clean).run.xml  tox [py310].run.xml  tox [py39] (clean).run.xml
src/file_templates/: gitignore_template.py  pre_commit_config_template.py  pyproject_toml_template.py  requirements_dev_txt_template.py  setup_cfg_templates.py  setup_py_template.py  tox_init_template.py
src/py_project_setup/: main.py
tests/: conftest.py  test_azure_pipeline.py  test_create_gitignore.py  test_create_markdown_files.py  test_create_pre_commit_config.py  test_create_project_lib_folder_in_src.py  test_create_pyproject_toml.py  test_create_root_folder_structure.py  test_create_setup_cfg.py  test_create_setup_py.py  test_create_tox_ini.py  test_create_txt_files.py
