[metadata]
name = py_project_setup
version = attr: py_project_setup.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scardona91/py-project-setup
author = Steven Cardona
author_email = cardona.sj@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities,
descriptions = Tool to generate a python project skeleton

[options]
packages = find:
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    packaging

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    setup-py-project = py_project_setup.main:main

[options.extras_require]
toml =
    toml

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-tests.*]
disallow_untyped_defs = False
